--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "dependencies": {
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-react-transform": "^1.1.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "lodash": "^4.5.0",
     "moment": "^2.11.2",
     "react": "^0.14.7",
@@ -32,12 +37,11 @@
     "underscore.string": "^3.2.3"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "^1.1.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.1",
-    "eslint-plugin-react": "^3.16.1",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.0",
-    "redbox-react": "^1.0.1"
+    "babel-preset-react-hmre": "^1.1.1",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.1",
+    "gatsby": "^0.10.0",
+    "react-transform-catch-errors": "^1.0.0"
   }
 }
