--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "gatsby": "^0.12.2",
     "lodash": "^4.5.0",
     "moment": "^2.11.2",
-    "react": "^0.14.7",
+    "react": "^15.3.0",
     "react-document-title": "^2.0.1",
-    "react-dom": "^0.14.7",
+    "react-dom": "^15.3.0",
     "react-responsive-grid": "^0.3.1",
     "react-router": "^2.0.0",
+    "react-typography": "^0.12.0",
     "safe-access": "^0.1.0",
-    "typography": "^0.7.0",
+    "typography": "^0.12.0",
+    "typography-plugin-code": "^0.12.0",
     "underscore.string": "^3.2.3"
   },
   "devDependencies": {
