--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://iamdustan.com/'
+baseURL = 'http://iamdustan.com/'
 blogTitle = "iamdustan.com"
 title = 'Dustan Kasten'
 authorName = "Dustan Kasten"
